Fix horizontal scrolling issue

--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  overflow: scroll;
 }
 
 header {
@@ -17,6 +18,7 @@ header {
 }
 
 footer {
+  width: 100%;
   background-color: purple;
   text-align: center;
   height: 70px;
@@ -124,7 +126,7 @@ li:hover {
 }
 
 #homeHero {
-  width: 100vw;
+  width: 100%;
   height: 270px;
   margin-bottom: 40px;
   background-image: url('./heroCat.jpg');
@@ -135,7 +137,7 @@ li:hover {
 }
 
 #menuHero {
-  width: 100vw;
+  width: 100%;
 }
 
 #menuHero img {
@@ -150,7 +152,7 @@ li:hover {
 
 #features {
   margin-bottom: 50px;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
